Query Filters: Fix scrolling to only apply on small screens

--- a/source/wp-content/themes/wporg-showcase-2022/src/style/style.scss
+++ b/source/wp-content/themes/wporg-showcase-2022/src/style/style.scss
@@ -103,9 +103,12 @@ a:where(:not(.wp-element-button)):focus-visible {
 	max-width: 100%;
 }
 
-.wporg-query-filters {
-	overflow-y: scroll;
-	max-width: 100%;
+/* Scroll the filter bar smaller screens. */
+@media (max-width: 889px) {
+	.wporg-query-filters {
+		overflow-y: scroll;
+		max-width: 100%;
+	}
 }
 
 /* Page footer */
